apps/data/weather/11-deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-ui
  namespace: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-ui
  template:
    metadata:
      labels:
        app: weather-ui
    spec:
      containers:
        - name: weather-ui
          image: ghcr.io/robertdwhite/weather-dashboard-ui
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
