apps/data/weather/52-httproute-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weather-public
  namespace: weather
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-white-fm
  hostnames:
    - weather.white.fm
    - meteorology.white.fm
  rules:
    - backendRefs:
        - name: weather-ui
          port: 80
