apps/data/weather/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weather-internal
  namespace: weather
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - weather.internal.white.fm
    - meteorology.internal.white.fm
  rules:
    - backendRefs:
        - name: weather-ui
          port: 80
